--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -105,6 +105,19 @@ noscript div.error
   :margin 20px 10px
   :font-size 2em
   
+// Tooltip
+#tooltip
+  :position absolute
+  :z-index 3000
+  :border 1px solid #111111
+  :background-color #EEEEEE
+  :padding 5px
+}
+#tooltip 
+  h3, div
+    :margin 0
+
+  
 // Pagination
 .pagination
   a, span
