--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -109,9 +109,10 @@ noscript div.error
 #tooltip
   :position absolute
   :z-index 3000
-  :border 1px solid #111111
-  :background-color #EEEEEE
-  :padding 5px
+  :border 1px solid #FED22F
+  :background-color #FFE45C
+  :padding 10px
+  :-moz-border-radius 5px
 }
 #tooltip 
   h3, div
