--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -90,5 +90,9 @@ th.image, td.image, th.checkbox, td.checkbox
   :min-width 16px
   :max-width 48px
   :padding 0
+th.icon, td.icon
+  :text-align center
+  :width 16px
+  :padding 0
 th.center, td.center
   :text-align center
