--- a/app/views/members/index.lua.erb
+++ b/app/views/members/index.lua.erb
@@ -3,15 +3,15 @@ JuggyCompare_Data = {
 
   <%- for member in @members -%>
   ["<%= member.name %>"] = {
-    ["NAME"] = "<%= member.name %>",
-    ["RANK"] = "TODO: Rank",
+    ["NAME"]     = "<%= h(member.name) %>",
+    ["RANK"]     = "<%= h(member.rank.name) unless member.rank_id.nil? %>",
     ["RAIDS_30"] = "<%= member.attendance_30 * 100.0 %>%",
     ["RAIDS_90"] = "<%= member.attendance_90 * 100.0 %>%",
     ["RAIDS_LT"] = "<%= member.attendance_lifetime * 100.0 %>%",
     ["LASTLOOT"] = "TODO: Last Loot",
-    ["LF"] = "<%= member.lf %>",
-    ["SLF"] = "<%= member.sitlf %>",
-    ["BISLF"] = "<%= member.bislf %>",
+    ["LF"]       = "<%= number_with_precision(member.lf, :precision => 2) %>",
+    ["SLF"]      = "<%= number_with_precision(member.sitlf, :precision => 2) %>",
+    ["BISLF"]    = "<%= number_with_precision(member.bislf, :precision => 2) %>",
   },
   <%- end -%>
 }
