General template cleanup; make sure all dynamic output is escaped with h() no matter how safe it seems; remove parenthesis from breadcrumb calls; other misc. stuff.

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -13,7 +13,7 @@
       %td.right Active
       %td &nbsp;
       - @counts.each do |wow_class, count|
-        %td.number= count
+        %td.number= h(count)
     / Attendance Averages
     %tr{ :class => cycle('even', 'odd') }
       %td.right 30-Day
