--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -7,7 +7,7 @@
     });
   });
 
-%h2= breadcrumb(link_to('Items', items_path), link_to_wowhead(@item))
+%h2= breadcrumb link_to('Items', items_path), link_to_wowhead(@item)
 #item_tabs
   %ul
     %li= link_to_tab("Loots (#{@loots.size})", '#t-loots')
@@ -23,7 +23,7 @@
       %tbody#itemfilter
         - @loots.each do |loot|
           %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
-            %td.date= link_to loot.purchased_on, raid_path(loot.raid_id) unless loot.raid_id.nil?
+            %td.date= link_to h(loot.purchased_on), raid_path(loot.raid_id) unless loot.raid_id.nil?
             %td.member= link_to_member(loot.member)
             %td.note= loot_tell_types(loot)
             %td.number= number_with_precision(loot.adjusted_price, :precision => 2)
