--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -18,7 +18,7 @@
       %tr{ :class => cycle('even', 'odd') }
         %td.icon= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class) unless member.wow_class.nil?
         %td{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
-        %td= member.rank.name unless member.rank.nil?
+        %td= h(member.rank.name) unless member.rank.nil?
         %td.attendance= member_attendance_colored(member.attendance_30)
         %td.attendance= member_attendance_colored(member.attendance_90)
         %td.attendance= member_attendance_colored(member.attendance_lifetime)
