--- a/app/views/raids/_attendees.html.haml
+++ b/app/views/raids/_attendees.html.haml
@@ -1,10 +1,10 @@
 %table.list
   %thead
     %tr
-      %th.fill Name
+      %th Name
       %th.attendance Attendance
   %tbody
     - @attendees.each do |attendee|
       %tr{ :class => cycle('even', 'odd') }
-        %td.fill= link_to_member(attendee.member)
+        %td= link_to_member(attendee.member)
         %td.attendance= raid_attendance_colored(attendee.attendance)
