--- a/app/views/raids/new.html.haml
+++ b/app/views/raids/new.html.haml
@@ -4,7 +4,7 @@
 /       dateFormat: "yy-mm-dd",
 /     });
 /   });
-%h2= breadcrumb(link_to('Raids', raids_path), 'New')
+%h2= breadcrumb link_to('Raids', raids_path), 'New'
 %fieldset
   - form_for @raid do |f|
     - unless f.error_messages.empty?
