Include buttons.css directly rather than through import

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag 'application'
     = javascript_include_tag 'http://www.wowhead.com/widgets/power.js'
     
-    = stylesheet_link_tag 'application', 'basic', 'forms', 'layout', 'tables', 'tabs', :cache => 'default'
+    = stylesheet_link_tag 'application', 'basic', 'buttons', 'forms', 'layout', 'tables', 'tabs', :cache => 'default'
 
     :javascript
       $(document).ready(function() {
