--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -13,7 +13,7 @@
       %td.right Active
       %td &nbsp;
       - @counts.each do |wow_class, count|
-        %td.number= h(count)
+        %td.number= link_to h(count), "/search/members/class:#{wow_class}"
     / Attendance Averages
     %tr{ :class => cycle('even', 'odd') }
       %td.right 30-Day
