--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -26,7 +26,7 @@
             %td.date= link_to h(loot.purchased_on), raid_path(loot.raid_id) unless loot.raid_id.nil?
             %td.member= link_to_member(loot.member)
             %td.note= loot_tell_types(loot)
-            %td.number= number_with_precision(loot.adjusted_price, :precision => 2)
+            %td.number= loot_factor(loot.adjusted_price)
   #t-wishlists
     %table.list
       %thead
