--- a/app/views/loots/index.html.haml
+++ b/app/views/loots/index.html.haml
@@ -15,6 +15,6 @@
         %td= link_to_member(loot.member)
         %td= loot_tell_types(loot)
         %td.date= link_to h(loot.purchased_on), raid_path(loot.raid) unless loot.raid.nil?
-        %td.number= number_with_precision(loot.adjusted_price, :precision => 2)
+        %td.number= loot_factor(loot.adjusted_price)
 %br
 = will_paginate @loots
