--- a/app/views/members/_loots.html.haml
+++ b/app/views/members/_loots.html.haml
@@ -19,4 +19,4 @@
         %td= loot_tell_types(loot)
         %td= loot_factor_cutoff(loot.purchased_on)
         %td.date= link_to h(loot.purchased_on), raid_path(loot.raid_id) unless loot.raid_id.nil?
-        %td.number= number_with_precision(loot.adjusted_price, :precision => 2)
+        %td.number= loot_factor(loot.adjusted_price)
