--- a/app/views/raids/_drops.html.haml
+++ b/app/views/raids/_drops.html.haml
@@ -11,4 +11,4 @@
         %td= link_to_item_with_stats(loot.item)
         %td.member= link_to_member(loot.member)
         %td= loot_tell_types(loot)
-        %td.number= number_with_precision(loot.adjusted_price, :precision => 2)
+        %td.number= loot_factor(loot.adjusted_price)
