Make the main tabs white on hover instead of the weird blue.

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -2,12 +2,10 @@
 
 #wrapper
   :background-color = !wrapper_background
-  / :background white none repeat scroll 0 0
     
 // Top Menu -------------------------------------------------------------------
 #top-menu
   :background-color = !top_menu_background
-  / :background #602020 none repeat scroll 0 0
   :font-size 1.2em
   :height 1.8em
   :color white
@@ -62,7 +60,7 @@
       :padding 4px 10px
       :text-decoration none
       &:hover
-        :background #759FCF none repeat scroll 0 0
+        :background #FFFFFF none repeat scroll 0 0
         :color #000000
       &.selected, &.selected:hover
         :background #FFFFFF none repeat scroll 0 0
