--- a/public/stylesheets/sass/constants.sass
+++ b/public/stylesheets/sass/constants.sass
@@ -1,7 +1,11 @@
 !default_font_family     = "\"Lucida Grande\", Lucida, Verdana, sans-serif"
 !defalut_font_color      = #484848
 
+!h2_color        = #444444
+!h2_border_color = #BBBBBB
+
 !top_menu_background = #602020
+!top_menu_color      = #FFFFFF
 !header_background   = #8A4040
 !header_color        = #F8F8F8
 
