--- a/app/views/members/_wishlist.html.haml
+++ b/app/views/members/_wishlist.html.haml
@@ -1,6 +1,10 @@
 :javascript
   $(document).ready(function() {
     sortWishlistTable();
+    $('#wishlist_item_name').autocomplete('/search/items.ac', {
+      minChars: 2,
+      autoFill: true
+    });
   });
 %table#wishlists.list.tablesorter
   %thead
