--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -19,16 +19,14 @@ html[xmlns] .clearfix {
 	height: 1%;
 }
 
-/* jQuery CSS Layout helpers
-----------------------------------*/
+/* jQuery CSS Layout helpers */
 .ui-helper-clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 .ui-helper-clearfix { display: inline-block; }
 /* required comment for clearfix to work in Opera \*/
 * html .ui-helper-clearfix { height:1%; }
 .ui-helper-clearfix { display:block; }
 
-/* jQuery autocomplete
-----------------------------------*/
+/* jQuery autocomplete */
 .ac_results {
 	padding: 0px;
 	border: 1px solid black;
@@ -68,3 +66,55 @@ html[xmlns] .clearfix {
 	background-color: #0A246A;
 	color: white;
 }
+
+/* Context Menu */
+.contextMenu {
+	position: absolute;
+	width: 120px;
+	z-index: 99999;
+	border: solid 1px #CCC;
+	background: #EEE;
+	padding: 0px;
+	margin: 0px;
+	display: none;
+}
+
+.contextMenu LI {
+	list-style: none;
+	padding: 0px;
+	margin: 0px;
+}
+
+.contextMenu A {
+	color: #333;
+	text-decoration: none;
+	display: block;
+	line-height: 20px;
+	height: 20px;
+	background-position: 6px center;
+	background-repeat: no-repeat;
+	outline: none;
+	padding: 1px 5px;
+	padding-left: 28px;
+}
+
+.contextMenu LI.hover A {
+	color: #FFF;
+	background-color: #3399FF;
+}
+
+.contextMenu LI.disabled A {
+	color: #AAA;
+	cursor: default;
+}
+
+.contextMenu LI.hover.disabled A {
+	background-color: transparent;
+}
+
+.contextMenu LI.separator {
+	border-top: solid 1px #CCC;
+}
+
+.contextMenu LI.edit A { background-image: url(/images/edit.png); }
+.contextMenu LI.delete A { background-image: url(/images/delete.png); }
