--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,5 +1,12 @@
 :javascript
-  $(document).ready(sortMemberTable);
+  $(document).ready(function() {
+    membersTableSort();
+    membersContextMenu();
+  });
+
+- if admin?  
+  %ul#contextMenu.contextMenu.hidden
+    %li.edit= link_to('Edit Member', '#edit')
 
 %table#members.list.tablesorter
   %thead
@@ -18,7 +25,7 @@
     - @members.each do |member|
       %tr{ :class => cycle('even', 'odd') }
         %td.icon= image_tag("classes/#{member.wow_class.downcase.gsub(/\s+/, '_')}.gif", :alt => member.wow_class) unless member.wow_class.nil?
-        %td{ :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
+        %td.member{ :id => "member-#{member.id}", :class => ( member.user_id.nil? ) ? 'user-missing' : '' }= link_to_member(member)
         %td= h(member.rank.name) unless member.rank.nil?
         %td.attendance= member_attendance_colored(member.attendance_30)
         %td.attendance= member_attendance_colored(member.attendance_90)
