Add contextMenu to Raids#index

--- a/app/views/raids/index.html.haml
+++ b/app/views/raids/index.html.haml
@@ -1,3 +1,12 @@
+:javascript
+  $(document).ready(function() {
+    raidsContextMenu();
+  });
+
+- if admin?  
+  %ul#contextMenu.contextMenu.hidden
+    %li.edit= link_to('Edit Raid', '#edit')
+    
 = will_paginate @raids
 %br
 %table.list
@@ -7,8 +16,6 @@
       %th.number Attendees
       %th.number Loots
       %th.note Note
-      - if admin?
-        %th.image Actions
   %tbody
     - @raids.each do |raid|
       %tr{ :class => cycle('even', 'odd') }
@@ -16,9 +23,5 @@
         %td.number= h(raid.attendees.size)
         %td.number= h(raid.loots.size)
         %td.note= h(raid.note)
-        - if admin?
-          %td.image
-            = link_to image_tag('edit.png'), edit_raid_path(raid)
-            = link_to image_tag('delete.png'), raid_path(raid), :confirm => 'Are you sure?', :method => :delete
 %br
 = will_paginate @raids
