--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -1,4 +1,4 @@
-%tr{ :class => cycle('even', 'odd'), :id => "wishlist-#{wishlist_row.id}" }
+%tr{ :class => cycle('even', 'odd') }[wishlist_row]
   %td= link_to_wowhead(wishlist_row.item) unless wishlist_row.item_id.nil?
   %td= h(wishlist_row.priority.titlecase)
   %td= h(wishlist_row.note)
