Just load the Raids tab by default rather than loading the page and then loading an AJAX tab immediately.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -29,12 +29,12 @@
     %span.small Situational
 #member_tabs
   %ul
-    %li= link_to_tab("Raids",        member_path(@member) + '/t.raids')
+    %li= link_to_tab("Raids",        '#t-raids')
     %li= link_to("Loots",            member_path(@member) + '/t.loots')
     %li= link_to_tab("Punishments",  member_path(@member) + '/t.punishments')
     %li= link_to_tab("Wishlist",     member_path(@member) + '/t.wishlist')
     %li= link_to_tab('Achievements', member_path(@member) + '/t.achievements')
-  #t-raids
+  #t-raids= render :partial => 'members/raids'
   #t-loots
   #t-punishments
   #t-wishlist
