Use thead.hidden and avoid an extra Javascript call to hide them after sorting.

--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -4,7 +4,7 @@
     .item-group
       %h4= link_to_item_with_stats(item.object)
       %table.list.tablesorter
-        %thead
+        %thead.hidden
           %tr
             %th Member
             %th Note
