--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -104,3 +104,10 @@
       :vertical-align middle
       :font = 14px Georgia
       :margin 0 60px 0 -3px
+      
+div.loot_table
+  h4
+    span
+      :width 30%
+    img
+      :float right
