--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -41,18 +41,13 @@ h4
   :margin 15px 0 3px 0
   a
     :text-decoration none
-  img.copy
-    :float right
     
 abbr
   :cursor help
   
-input[type=hidden]
+.hidden, input[type=hidden]
   :display none
   
-.hidden
-  :display none
-    
 // WoW Class Colors
 .Death, .Knight
   &, &:link, &:visited
@@ -121,7 +116,6 @@ noscript div.error
   h3, div
     :margin 0
 
-  
 // Pagination
 .pagination
   a, span
