Redesign the Raids#show page
Got rid of tabs in favor of two sections, and the attendees display wastes much less space now, while still being done without tables. View should be simple enough now that we don't need their partials.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
         $('#main').removeClass('hidden');
         hideSuccessFlash();
       });
-  %body
+  %body{:id => controller.controller_name}
     #wrapper.clearfix
       #top-menu.clearfix
         %ul
