--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -49,7 +49,7 @@ abbr
   :display none
   
 // WoW Class Colors
-.Death, .Knight
+.Death_Knight, .Death, .Knight
   &, &:link, &:visited
     :color = #C41E3B
 .Druid
