Now that we put the controller name in the body id attribute, rename the 'member_stats' div to just 'stats', as a child of 'members'

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -7,7 +7,7 @@
   });
   
 %h2= breadcrumb link_to('Members', members_path), link_to_armory(@member)
-#member_stats
+#stats
   %h3
     = member_attendance_colored(@member.attendance_30)
     %span.small 30-day attendance
