--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -88,22 +88,23 @@
   #content
     :margin-left 325px
   
-#member_stats
-  :text-align center
-  :border-bottom
-    :width 1px
-    :style solid
-    :color = !h2_border_color
-  :padding-bottom 10px
-  :margin-bottom 10px
-  h3
-    :display inline
-    :font 3em Georgia
-    :margin 0
-    span.small
-      :vertical-align middle
-      :font = 14px Georgia
-      :margin 0 60px 0 -3px
+#members
+  #stats
+    :text-align center
+    :border-bottom
+      :width 1px
+      :style solid
+      :color = !h2_border_color
+    :padding-bottom 10px
+    :margin-bottom 10px
+    h3
+      :display inline
+      :font 3em Georgia
+      :margin 0
+      span.small
+        :vertical-align middle
+        :font = 14px Georgia, serif
+        :margin 0 60px 0 -3px
       
 // Wishlist item group --------------------------------------------------------
 div.loot_table
