--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -10,4 +10,4 @@
     
     .buttons
       = styled_button(:type => 'submit', :image => 'tick.png', :text => 'Save')
-      = styled_button(:type => 'reset')
+      = styled_button(:type => 'reset', :image => 'form_delete.png')
