Broke member table sorting by putting the conteroller name in the body id.

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -8,7 +8,7 @@
   %ul#contextMenu.contextMenu.hidden
     %li.edit= link_to('Edit Member', '#edit')
 
-%table#members.list.tablesorter
+%table#index.list.tablesorter
   %thead
     %tr
       %th &nbsp;
