--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -48,6 +48,10 @@ abbr
 .hidden, input[type=hidden]
   :display none
   
+// WoW item color overrides
+#wrapper .q1, #wrapper .q1 a
+  :color = #FFFFFF - 90 !important
+  
 // WoW Class Colors
 .Death_Knight, .Death, .Knight
   &, &:link, &:visited
