--- a/app/views/wishlists/_wishlist_row.html.haml
+++ b/app/views/wishlists/_wishlist_row.html.haml
@@ -1,7 +1,7 @@
 %tr{ :class => cycle('even', 'odd') }[wishlist_row]
   %td= link_to_item_with_stats(wishlist_row.item) unless wishlist_row.item_id.nil?
   %td= h(wishlist_row.priority.titlecase)
-  %td= h(wishlist_row.note)
+  %td= truncate(h(wishlist_row.note), :length => 80)
   %td= h(wishlist_row.item.item_stat.slot) unless wishlist_row.item_id.nil? or wishlist_row.item.item_stat_id.nil?
   %td.image{ :width => "48px" }
     = link_to_function(image_tag('edit.png'), "wishlistEditForm('#{edit_member_wishlist_path(@member, wishlist_row)}')")
