Add some top/bottom padding to members in Raids#show

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -156,6 +156,7 @@ div.loot_table
         :list-style-type none
         li
           :width 60%
+          :padding 2px 0
           span
             :float right
   #drops
