Raids#new says "Date string" instead of "Date"

--- a/app/views/raids/_form.html.haml
+++ b/app/views/raids/_form.html.haml
@@ -1,4 +1,4 @@
-= form.label :date_string
+= form.label :date_string, 'Date'
 = form.text_field :date_string, :class => 'small'
 
 = form.label :note
