Fill out the top nav links.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,15 +19,15 @@
     #wrapper.clearfix
       #top-menu.clearfix
         %ul
-          %li= link_to "Juggernaut (US-Mal'Ganis Horde)", '#'
+          %li= link_to "Juggernaut (US-Mal'Ganis Horde)", 'http://www.juggernautguild.com/'
         %ul#right
-          %li= link_to 'Home', '#'
-          %li= link_to 'About Us', '#'
-          %li= link_to 'Joining', '#'
-          %li= link_to 'Forums', '#'
-          %li= link_to 'Calendar', '#'
-          %li= link_to 'Roster', '#'
-          %li= link_to 'DKP', '#'
+          %li= link_to 'Home', 'http://www.juggernautguild.com/index.php?act=home'
+          %li= link_to 'About Us', 'http://www.juggernautguild.com/index.php?showtopic=13476'
+          %li= link_to 'Joining', 'http://www.juggernautguild.com/index.php?showtopic=13475'
+          %li= link_to 'Forums', 'http://www.juggernautguild.com/index.php?act=idx'
+          %li= link_to 'Calendar', 'http://www.juggernautguild.com/index.php?act=calendar'
+          %li= link_to 'Roster', 'http://www.wowarmory.com/guild-info.xml?r=Mal%27Ganis&n=Juggernaut+II&p=1'
+          %li= link_to 'LF', 'http://www.juggernautguild.com/index.php?showforum=23'
       #header.clearfix
         #main-menu.clearfix
           %ul
